--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,33 +1,39 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" routerLink="/">Ciphers</a>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-navbar-blue">
+  <div class="mx-auto">
+    <a class="navbar-brand" href="#">
+      <div class="row">
+        <!-- <img src="../../../assets/img/caesarCipherLogoWhite.png" width="65" height="65" alt=""> -->
+        <h4>Clasical Ciphers</h4>
+      </div>
+    </a>
+  </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-          <a routerLink="/caesarcipher" >Caesar Cipher</a>
-        </li>
-        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-          <a routerLink="/transpositioncipher">Transposition Cipher</a>
-        </li>
-        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-          <a routerLink="/polyalphcipher">Polyalphabetic Cipher</a>
-        </li>
-        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-          <a routerLink="/monoalphcipher">Monoalphabetic Cipher</a>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+  <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Regular link</a>
+        <a class="dropdown-item active" href="#">Active link</a>
+        <a class="dropdown-item" href="#">Another link</a>
+      </div>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+      </li>
+  
+    </ul>
+
+  </div> -->
+</nav>
+<br />
+<!--  -->
+<nav
+  class="navbar navbar-expand-lg navbar-light bg-navbar-blue"
+  [ngClass]="{ 'sticky-top': isSticky }"
+>
+  <div class="d-flex flex-column  col-md-4 offset-md-1">
+    <div class="cipher-type"><h5>Monoalphabetic</h5></div>
+    <div class="cipher-name">
+      <h3>Caesar Cipher</h3>
+    </div>
+  </div>
 </nav>
