--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 html, body { 
     height: 100%;
-    background-color:#e0efff99;
+    background-color:#E8E8E8;
 
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
