--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
@@ -1,8 +1,15 @@
 <div class="container">
   <div class="row text-center">
     <div class="col-md-12">
-      <h2>Polyalphabetic Cipher</h2>
-      <br />
+      <br>
+      <div class="col-md-8 col-md-offset-2">
+        The Vigenere Cipher is a method of encrypting alphabetic text by using a series of Caesar ciphers, 
+        based on the letters of a keyword. In a Caesar cipher, each letter of the alphabet is shifted along some number of places. 
+        For example, in a Caesar cipher of shift 3, A would become D, B would become E,
+         Y would become B and so on. The Vigenère cipher has several Caesar ciphers in sequence with different shift values.
+      </div>
+
+      <br>
       <mat-card>
         <mat-vertical-stepper #stepper>
           <mat-step>
@@ -15,11 +22,11 @@
                   placeholder="Set key"
                   name="keyInput"
                   formControlName="key"
-                  maxlength="3"
+                  maxlength="4"
                 />
-                <mat-hint>Please, enter key of length 2 or 3 and key must include letters a-z or A-Z. </mat-hint>
+                <mat-hint>Please, enter key of length 2 to 4 and key must include letters a-z or A-Z. </mat-hint>
                 <mat-error *ngIf="cipherInputsForm.get('key').hasError('maxlength') || cipherInputsForm.get('key').hasError('minlength')">
-                  Please, enter key of length 2 or 3.
+                  Please, enter key of length 2 to 4.
                 </mat-error>
                 <mat-error *ngIf="cipherInputsForm.get('key').hasError('pattern')">
                   Please, text must include letters a-z or A-Z.
@@ -36,7 +43,7 @@
                   #autosize="cdkTextareaAutosize"
                   cdkAutosizeMinRows="2"
                   cdkAutosizeMaxRows="9"
-                  placeholder="Type message to encrypt"
+                  placeholder="Type message in English language"
                   name="messageInput"
                   formControlName="message"
                   maxlength="2000"
@@ -67,6 +74,9 @@
               >Show Encrypted and Decrypted Message</ng-template
             >
             <br />
+            In Encrypted block we can see separated text to blocks. For example when we have key of length 3. We get 3 boxes. See a more detailed example below
+            <br>
+            <br>
             <div class="row">
               <div class="col-md-6">
                 <mat-card>
@@ -106,7 +116,17 @@
             <br />
             <br /><br />
             <div class="col-md-12">
+              <div class="col-md-8">
+                <span>We try find length of key. We separate text into boxes, number of boxes is length of key.
+                  For example when we have key of length 3 boxes. In first box will be first letter from encrypted text(CT), in second box second letter form CT, in third box third letter of CT.
+                  Then we compute frequency of every box and Index Coincidence(IC).
+                  For boxes we compute average of ICs.
+                  Then we repeat this steps and we compute average ICs for key of length <2,16>
+                  In this example we expect that text is in English language.
+                  </span>
+              </div>
               <div class="alert alert-success" role="alert">
+               
                 <!-- <span>The best Index of coincidence is: {{highestIC | number:'1.0-4'}}</span> -->
                 <span>The best lengths of key are: </span>
                 <p *ngFor="let index of highestIC">
@@ -131,6 +151,9 @@
               >Compute all combinations for key</ng-template
             >
             <div class="col-md-12">
+              We try decrypt message and find out key of encrypted message. We use guess of key length form previous step.
+We do it only for key of length <2,4> because we compute all possibilities on client computer.  Key of length has 26^3 = 17,576‬ possible keys, but key of length 4 has 26^4 has 456 976 keys. 
+              <br>
               <app-table
                 [columnNames]="columnsBestResults"
                 [dataSource]="dataSourceBestResults"
