Change header name

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -32,12 +32,12 @@
       </li>
       <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
         <a class="dropdown-item" routerLink="/polyalphcipher"
-          >Polyalphabetic Cipher</a
+          >Vigenere Cipher</a
         >
       </li>
       <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
         <a class="dropdown-item" routerLink="/monoalphcipher"
-          >Monoalphabetic Cipher</a
+          >Simple Substitution Cipher</a
         >
       </li>
     </div>
