--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -113,8 +113,7 @@
         <mat-card-content style="word-wrap: break-word;">
           For finding key we use Hill Climbing alghorithm.
 
-          <h5>We generate random key {{ iterStartKey }}</h5>
-          For start we swap only 4 letters of dec key
+          <h5>We generate random key {{ rndKey }}</h5>
           <h5>We try to find key {{ keys.decKey }}</h5>
         </mat-card-content>
       </mat-card>
@@ -136,10 +135,9 @@
             </li>
             <li>save only better result</li>
             <li>
-              if we got worse result than we throw away current key and next we
-              use key from previus step
+              if we got better result then in next step we use this key from better result.
             </li>
-            <li>save only better result</li>
+
           </ul>
           These steps we repeat for n times
         </mat-card-content>
@@ -150,7 +148,7 @@
     <br />
 
     <div class="row">
-      <ng-container *ngFor="let guess of guessedKey.allBetterGuess">
+      <ng-container *ngFor="let guess of allGuess">
         <div class="col-md-4">
           <mat-card>
             <mat-card-header>
@@ -159,7 +157,7 @@
             </mat-card-header>
             <mat-card-content style="word-wrap: break-word;">
               <p>{{ guess.decryptedText | slice: 0:150 }}</p>
-              <h5>Sum {{ guess.sum }}</h5>
+              <h5>Sum {{ guess.sum | number:'1.0-3'}} *</h5>
               <p>
                 <small>
                   *difference between calculated frequencies and referal values
