Refactor and add comments

--- a/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
+++ b/src/app/pages/monoalphabetic-cipher-module/monoalphabetic-cipher-component/monoalphabetic-cipher-component.component.html
@@ -25,7 +25,7 @@
         <mat-card-content style="word-wrap: break-word;">
           {{ rndKey }}
 
-          <button mat-button (click)="generateRndKey()">
+          <button mat-button (click)="shuffleRndKey()">
             Generate key
           </button>
         </mat-card-content>
