--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-boxes-component/polyalph-boxes-component.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-boxes-component/polyalph-boxes-component.component.html
@@ -46,11 +46,7 @@
       <div class="row">
         <div
           class="col-md-3 col-sm-3 box"
-          *ngFor="
-            let box of allBoxes[selectedValue - 2];
-            let j = index
-          "
-        >
+          *ngFor="let box of allBoxes[selectedValue - 2];let j = index">
           <mat-card>
             <mat-card-header>
               <mat-card-title>Box {{ j + 1 }}</mat-card-title>
