--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -56,7 +56,8 @@
   </div>
 </nav>
 
-<div class="navbar-sticky"  [ngClass]="{ 'hide-cipher-navbar': !isSticky, 'show-cipher-navbar sticky-top': isSticky  }">
+<div class="navbar-sticky"  [ngClass]="{ 'hide-cipher-navbar': !isSticky, 'show-cipher-navbar static-top': isSticky  }">
   <p>Up</p>
   {{cipherName}}
 </div>
+
