--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,5 +1,5 @@
 <div class="row col-md-12">
     <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptionsFreqGraph"
-        [(update)]="updateState">
+        [(update)]="updateState" class="col-md-12">
     </highcharts-chart>
 </div>
