Fix: automatic select toogle btn, enhanced computing best length of key

--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-boxes-component/polyalph-boxes-component.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-boxes-component/polyalph-boxes-component.component.html
@@ -2,7 +2,7 @@
     <b>Choose length of key</b>
     <br /><br />
     <div class="row ">
-      <mat-button-toggle-group [(ngModel)]="selectedValue">
+      <mat-button-toggle-group [(ngModel)]="selectedValue" #group="matButtonToggleGroup" >
         <mat-button-toggle
           *ngFor="let item of toggleOptions"
           (change)="selectionOfGraphChanged($event)"
