Size of table set to full width of page

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,5 +1,7 @@
+<div class="col-md-12 full-width mat-elevation-z8">
+
 <table mat-table #sort="matSort" [dataSource]="dataSource" matSort [matSortActive]="defaultSort.sortByColumn" [matSortDirection]="defaultSort.order"
-    class="mat-elevation-z8">
+    class="">
 
     <ng-container *ngFor="let name of columnNames" mat-text-column="end" [matColumnDef]="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{name}}</th>
@@ -7,5 +9,6 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
-    <tr mat-row *matRowDef="let row; columns: columnNames; "></tr>
+    <tr mat-row *matRowDef="let row; columns: columnNames; " ></tr>
 </table>
+</div>
