--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -28,12 +28,22 @@ body {
 }
 
 .main-navbar {
-  padding: 1rem 0;
-  margin-bottom: 0.2rem;
+  padding: 0.5vh 0;
+  margin-bottom: 1vh;
+  position: fixed;
+  width: 100%;
+  height: 7vh;
+  z-index: 101;
+  box-sizing: border-box;
 }
 
 .cipher-navbar {
   padding: 1.5rem 0;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  top: 7.2vh;
+
 }
 
 .navbar-sticky > p {
@@ -47,6 +57,10 @@ body {
   background-color: #255e69;
   padding: 1rem;
   text-align: center;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  top: 7.2vh
 }
 
 .hide-cipher-navbar {
@@ -55,6 +69,10 @@ body {
 
 .show-cipher-navbar {
   display: block;
+  top: 8vh;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
 }
 
 .static-top {
